mobile in progress

--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
 </head>
 <body>
     <header id="header">
+        <div class="mobile-header">
+            <div class="header-logo">
+                <img src="images/logo_Oxit.png" alt="logo_Oxit">
+            </div>
+            <div class="filler"></div>
+            <input id="menu__toggle" type="checkbox" />
+            <label class="menu__btn" for="menu__toggle">
+                <span></span>
+            </label>
+            <nav class="header-menu menu__box">
+                <ul class="header-navigation ">
+                    <li class="header-navigation-item "><a href="#home" class="main-links-item ">Головна</a></li>
+                    <li class="header-navigation-item"><a href="#course" class="main-links-item">Програма курсу</a></li>
+                    <li class="header-navigation-item"><a href="#feedbacks" class="main-links-item">Відгуки про курс</a></li>
+                    <li class="header-navigation-item"><a href="#video" class="main-links-item">Відео</a></li>
+                    <li class="header-navigation-item"><a href="#mentors" class="main-links-item">Ментори</a></li>
+                    <li class="header-navigation-item"><a href="#registration" class="main-links-item active">Подати заявку</a></li>
+                </ul>
+            </nav>
+        </div>
         <div class="header">
             <div class="header-logo">
                 <img src="images/logo_Oxit.png" alt="logo_Oxit">
