--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                 <p class="slider-item-text">
                     Для створенні чудових сайтів на Drupal 8, цеглинка з цеглинкою, то пізнаеші секрети основних та додаткових Drupal модулів Views, Rules, Panels. Devel Paragraph та багатьох інших).
                 </p>
-            </div>
-            <div class="course-slider-item">
+            </div> -->
+            <!-- <div class="course-slider-item">
                 <img src="images/icons/course-icon-3.png" alt="slider-logo" class="slider-item-logo">
                 <h3 class="slider-item-title">Ознайомлення з тестуванням</h3>
                 <p class="slider-item-text">
